[FIX] spreadsheet: fix share dropdown style on mobile
There were 2 issues with the share dropdown on mobile:

1) it didn't take the full width of the bottom sheet

2) half of the height of the dropdown was not visible and need to be
scrolled to be seen. That was because at the first render, the URL
wasn't loaded and we displayed a loading spinner. But since the
spinner was smaller than the eventual content, the height of the
dropdown was too small.

Task: 4996784
X-original-commit: b01e6e1082eeec45df264874523a80dda122587c

--- a/addons/spreadsheet/static/src/components/share_button/share_button.scss
+++ b/addons/spreadsheet/static/src/components/share_button/share_button.scss
@@ -8,3 +8,11 @@
     display: block;
   }
 }
+
+.o_bottom_sheet .spreadsheet_share_dropdown {
+  width: 100%;
+
+  .o_loading_state {
+    height: 40px;
+  }
+}
