[IMP] html_editor : improve file upload UX
Ensure the file card is located in the correct location in the document.

task-5043190

--- a/addons/html_editor/static/src/others/embedded_components/core/file/file.scss
+++ b/addons/html_editor/static/src/others/embedded_components/core/file/file.scss
@@ -13,3 +13,7 @@
         width: 190px;
     }
 }
+
+.o_image[data-mimetype^='uploading'] {
+    background-image: url('/html_editor/static/src/others/embedded_components/core/file/loading.svg');
+}
