[IMP] hr_work_entry: Add description on work entry type
Part-of: odoo/odoo#229864
Related: odoo/enterprise#96248
Signed-off-by: Yannick Tivisse (yti) <yti@odoo.com>

--- a/addons/hr_work_entry/views/hr_work_entry_views.xml
+++ b/addons/hr_work_entry/views/hr_work_entry_views.xml
@@ -270,6 +270,9 @@
                     <group name="other">
                         <group name="time_off" string="Time Off Options" class="o_form_fw_labels"/>
                     </group>
+                    <group>
+                        <field name="description"/>
+                    </group>
                 </sheet>
             </form>
         </field>
