[FIX] web: BottomSheet: fix switch view layout for long text
This commit adds some CSS rules to have a better layout when there are
long view title in some language (e.g.: in French: "Tableau croisé dynamique")

task-5139101

X-original-commit: 5b9fc60aee91f415c3e026311cde6aa92883970d

--- a/addons/web/static/src/search/control_panel/control_panel.scss
+++ b/addons/web/static/src/search/control_panel/control_panel.scss
@@ -202,10 +202,16 @@
         display: grid;
         justify-items: center;
         gap: map-get($spacers, 2);
-        padding: map-get($spacers, 3);
+        padding: map-get($spacers, 3) map-get($spacers, 2);
 
         &.selected::before {
             content: none !important;
+        }
+
+        > span {
+            @include text-truncate();
+            max-width: 100%;
+            margin-left: 0 !important; // Counter BS rule ms-1
         }
     }
 }
