[FIX] mail: fix thread action button and messaging menu UI
Before this commit:

1. Since [1], in thread actions like `Mark all read` and `Unstar all`, buttons
had extra height because aspect-ratio was applied even when there was no icon,
making the UI look uneven.
2. Since [2], text in the messaging menu tab in mobile was not centered,
leading to misaligned UI.

After this commit:

- Aspect-ratio is applied only if an icon exists in the action button,
  fixing the height issue.
- Added a class to center text in the messaging menu tab,
  improving visual alignment.

[1]: https://github.com/odoo/odoo/pull/225216
[2]: https://github.com/odoo/odoo/pull/228657

closes odoo/odoo#230092

X-original-commit: 5fa01f5a9605a59463a05eef007fa9c55cf1221d
Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/core/common/action_list.scss
+++ b/addons/mail/static/src/core/common/action_list.scss
@@ -34,7 +34,7 @@
             i.o-xsmaller {
                 transform: translateY(-2px);
             }
-            &:not(:has(i.o-xsmaller)) {
+            &:has(i:not(.o-xsmaller)) {
                 aspect-ratio: 1;
             }
         }
