--- a/addons/stock/report/report_stockpicking_operations.xml
+++ b/addons/stock/report/report_stockpicking_operations.xml
@@ -3,8 +3,8 @@
     <data>
 
         <template id="report_picking">
-            <t t-call="web.report_layout">
-                <div class="article o_report_layout_standard">
+            <t t-call="web.html_container">
+                <t t-call="web.external_layout">
                     <t t-foreach="docs" t-as="o">
                         <t t-set="address" t-value="None"/>
                         <div class="page o_report_stockpicking_operations">
@@ -272,7 +272,7 @@
                             <div class="oe_structure"></div>
                         </div>
                     </t>
-                </div>
+                </t>
             </t>
         </template>
         <template id="report_picking_type_label">
