[Fix] fix optional cookies issue
. Added 3 hidden fileds on website_hr_recruitment_templates on website_hr_recruitment module that's needed to fix the issue of optional UTM cookies on hr_referral module in eneterprise

--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -326,6 +326,27 @@
                                         <a href="#" role="button" class="btn btn-primary btn-lg s_website_form_send" id="apply-btn">I'm feeling lucky</a>
                                         <span id="s_website_form_result"></span>
                                     </div>
+                                    <div class="col-sm" >
+                                        <input id="recruitment9" type="hidden"
+                                            class="form-control s_website_form_input pl64"
+                                            style="padding-inline-start: calc(40px + 0.375rem)"
+                                            name="ref_user_id"
+                                            t-att-value="ref_user_id"/>
+                                    </div>
+                                    <div class="col-sm" >
+                                        <input id="recruitment10" type="hidden"
+                                            class="form-control s_website_form_input pl64"
+                                            style="padding-inline-start: calc(40px + 0.375rem)"
+                                            name="utm_campaign_id"
+                                            t-att-value="utm_campaign_id"/>
+                                    </div>
+                                    <div class="col-sm" >
+                                        <input id="recruitment11" type="hidden"
+                                            class="form-control s_website_form_input pl64"
+                                            style="padding-inline-start: calc(40px + 0.375rem)"
+                                            name="utm_medium_id"
+                                            t-att-value="utm_medium_id"/>
+                                    </div>
                                 </div>
                             </form>
                         </div>
