--- a/addons/web/views/neutralize_views.xml
+++ b/addons/web/views/neutralize_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="web.neutralize_banner"  name="Neutralize Banner" inherit_id="web.layout" active="False">
+    <template id="web.neutralize_banner"  name="Neutralize Banner" inherit_id="web.layout" priority="999" active="False">
         <xpath expr="//body" position="inside">
             <div>
                 <span id="oe_neutralize_banner" t-attf-style="
