change base color to blue

--- a/addons/web/static/src/scss/primary_variables.scss
+++ b/addons/web/static/src/scss/primary_variables.scss
@@ -70,7 +70,10 @@ $o-grays: (
     900: $o-gray-900,
 ) !default;
 
-$o-community-color: #71639e !default;
+// $o-community-color: #71639e !default;
+$o-community-color: #536df1 !default;// Use the standard "sky blue"
+$o-brand-primary: #87CEEB !default;
+$o-action: $o-brand-primary !default;
 $o-enterprise-color: #714B67 !default;
 $o-enterprise-action-color: #017e84 !default;
 
